# terrapainter

./: .gitignore  CMakeLists.txt  README.md  create_context.cpp  imgui.ini
.github/workflows/: cmake.yml
app/models/tree/: yamaboushi_tan_6000_a_aut1.mtl
app/shaders/: canvas.vert  canvas_composite.frag  canvas_composite.vert  canvas_stroke.comp  clouds.frag  clouds.vert  grass.frag  grass.geom  grass.vert  heightmap.frag  heightmap.fs  heightmap.vert  paint_composite.comp  paint_preview.frag  paint_stroke.comp  screenspace.vert  screenspace_circle.frag  screenspace_circle.vert  simple_2d.frag  sky.frag  sky.vert  smooth_composite.comp  smooth_integrate_x.comp  smooth_integrate_xy.comp  splatter_composite.comp  tree.frag  tree.vert  tree.vs  unlit.frag  unlit.vert  water.frag  water.vert
glad/include/glad/: glad.h
glad/src/: glad.c
include/gui/: slider.h
include/learnopengl/: camera.h  mesh.h  model.h  shader_m.h  skybox.h  texture.h
include/terrapainter/: attribute.h  camera.h  entity.h  geometry.h  linalg.h  material.h  math.h  mesh.h  pixel.h  shader_s.h  util.h
include/terrapainter/scene/: attribute.h  camera.h  entity.h  geometry.h  material.h  mesh.h  model.h
shaders/: 3.3.shader.vs  heightmap.fs  heightmap.vs
src/: attribute.h  camera.cpp  canvas.cpp  canvas.h  canvas2.h  controllers.cpp  controllers.h  create_context.cpp  entity.cpp  geometry.cpp  geometry.h  helpers.h  main.cpp  material.cpp  material.h  mesh.h  model.h  painter.cpp  painter.h  shadermgr.cpp  shadermgr.h  terrain.cpp  terrain.h  terrapainter.cpp  terrapainter.h  world.cpp  world.h
src/canvas/: canvas.cpp  canvas.h  paint.cpp  tool.h
src/scene/: camera.cpp  controllers.cpp  controllers.h  entity.cpp  geometry.cpp  material.cpp  sky.cpp  sky.h  terrain.cpp  terrain.h  water.cpp  water.h
src/shaders/: screenspace_circle.cpp  screenspace_circle.h  unlit.cpp  unlit.h
src/tools/: canvas_tools.h  paint.cpp  smooth.cpp  splatter.cpp
tests/: linalg.cpp  math.cpp
